feat: google fonts added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   card_swiper: ^2.0.4
   flutter_dotenv: ^5.0.2
   http: ^0.13.5
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
